# digitalocean-hackathon

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile.api  IMPLEMENTATION_PLAN.md  PHASE45_RUNBOOK.md  PRD.md  README.md  compose.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  verity_gradient_evidence_plan.md  verity_phase0plan.md  verity_phase1plan.md  verity_phase2plan.md  verity_phase3plan.md  verity_phase4plan.md  verity_phase5plan.md
.claude/: launch.json
.do/: app.yaml
.github/workflows/: ci.yml  contracts-artifact.yml
apps/extension/: offscreen.html  options.html  package.json  popup.html  tsconfig.json  vite.config.ts  vite.content.config.ts
apps/pwa/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: index.html  package.json  vite.config.ts
browser/: golden-demo.spec.ts  phase1.spec.ts
fixtures/: gradient-kb.json
fixtures/hero-demo/: hero.json  phase2-transcript.json  phase3-evidence.json  phase3-trust-review.json
infra/: app.yaml  web.yaml
phase0/: PROBE_PROTOCOL.md  README.md  RUNBOOK.md  harness.py
phase0/results/: README.md
phase0/schemas/: classification.schema.json  evidence.schema.json  push.schema.json  run.schema.json  transcript.schema.json  verdict.schema.json
phase0/templates/: compatibility.example.json  decision.example.md  demo-manifest.example.json  (+3 more)
screenshots/: README.md
scripts/: demo_rehearsal.py  deploy.ps1  embed_pwa.mjs  export_openapi.py  migrate.py  package_extension.mjs  preflight.py  prepare_deploy.py  prepare_web_deploy.py  run-python.mjs  smoke_gradient.py
(+128 files in other folders)
